--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,8 @@
     <string name="disambiguation">Disambiguation</string>
     <string name="gender">Gender</string>
     <string name="score">Score</string>
+    <string name="instrumentsRoute">Instruments</string>
+    <string name="type">Type\n</string>
+    <string name="instrumentDetailRoute">Detail</string>
 
 </resources>
